tests/parse-fail/bad_tuple3.fl
pub mod bad_tuple3 {
    pub struct BadTuple3 {
        pub t : ();
    }
}
